--- a/MH_Predict_News_category.ipynb
+++ b/MH_Predict_News_category.ipynb
@@ -30,29 +30,29 @@
       "metadata": {
         "id": "YhluJ1iGF_ao",
         "colab_type": "code",
+        "outputId": "9902948f-0d5c-460c-94f6-fbdfab9afa80",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 276
-        },
-        "outputId": "a7c2c4fb-20d0-416e-ec78-f3a06c62ab3b"
+        }
       },
       "source": [
         "!pip install fasttext"
       ],
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting fasttext\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/10/61/2e01f1397ec533756c1d893c22d9d5ed3fce3a6e4af1976e0d86bb13ea97/fasttext-0.9.1.tar.gz (57kB)\n",
-            "\r\u001b[K     |█████▊                          | 10kB 22.4MB/s eta 0:00:01\r\u001b[K     |███████████▍                    | 20kB 6.2MB/s eta 0:00:01\r\u001b[K     |█████████████████               | 30kB 8.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████▊         | 40kB 5.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▍   | 51kB 7.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 61kB 4.7MB/s \n",
+            "\r\u001b[K     |█████▊                          | 10kB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████▍                    | 20kB 1.7MB/s eta 0:00:01\r\u001b[K     |█████████████████               | 30kB 2.6MB/s eta 0:00:01\r\u001b[K     |██████████████████████▊         | 40kB 1.7MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▍   | 51kB 2.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 61kB 2.1MB/s \n",
             "\u001b[?25hRequirement already satisfied: pybind11>=2.2 in /usr/local/lib/python3.6/dist-packages (from fasttext) (2.4.3)\n",
             "Requirement already satisfied: setuptools>=0.7.0 in /usr/local/lib/python3.6/dist-packages (from fasttext) (42.0.2)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from fasttext) (1.17.4)\n",
             "Building wheels for collected packages: fasttext\n",
             "  Building wheel for fasttext (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for fasttext: filename=fasttext-0.9.1-cp36-cp36m-linux_x86_64.whl size=2385218 sha256=a66b02ca1b6a2d237a189bf5ab700e3a499db2d2e82cdf673c88d61a89cee619\n",
+            "  Created wheel for fasttext: filename=fasttext-0.9.1-cp36-cp36m-linux_x86_64.whl size=2385241 sha256=72d5f33ae41ec1b5994f2f146c20ed027d34cae567cec6b71e12bad18baf22b8\n",
             "  Stored in directory: /root/.cache/pip/wheels/9f/f0/04/caa82c912aee89ce76358ff954f3f0729b7577c8ff23a292e3\n",
             "Successfully built fasttext\n",
             "Installing collected packages: fasttext\n",
@@ -67,23 +67,28 @@
       "metadata": {
         "id": "xTNxdY3NEh3m",
         "colab_type": "code",
+        "outputId": "62fb4c3d-12ce-4e44-cfd3-a2b4631d2eb9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "da1a1acb-914e-40f6-8b72-71856fe6c151"
+          "height": 127
+        }
       },
       "source": [
         "!git clone https://github.com/adarsh-meher/MachineHack---Predict-News-Category.git\n",
         "import os\n",
         "os.chdir('/content/MachineHack---Predict-News-Category/')"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "fatal: destination path 'MachineHack---Predict-News-Category' already exists and is not an empty directory.\n"
+            "Cloning into 'MachineHack---Predict-News-Category'...\n",
+            "remote: Enumerating objects: 9, done.\u001b[K\n",
+            "remote: Counting objects:  11% (1/9)\u001b[K\rremote: Counting objects:  22% (2/9)\u001b[K\rremote: Counting objects:  33% (3/9)\u001b[K\rremote: Counting objects:  44% (4/9)\u001b[K\rremote: Counting objects:  55% (5/9)\u001b[K\rremote: Counting objects:  66% (6/9)\u001b[K\rremote: Counting objects:  77% (7/9)\u001b[K\rremote: Counting objects:  88% (8/9)\u001b[K\rremote: Counting objects: 100% (9/9)\u001b[K\rremote: Counting objects: 100% (9/9), done.\u001b[K\n",
+            "remote: Compressing objects:  12% (1/8)\u001b[K\rremote: Compressing objects:  25% (2/8)\u001b[K\rremote: Compressing objects:  37% (3/8)\u001b[K\rremote: Compressing objects:  50% (4/8)\u001b[K\rremote: Compressing objects:  62% (5/8)\u001b[K\rremote: Compressing objects:  75% (6/8)\u001b[K\rremote: Compressing objects:  87% (7/8)\u001b[K\rremote: Compressing objects: 100% (8/8)\u001b[K\rremote: Compressing objects: 100% (8/8), done.\u001b[K\n",
+            "Unpacking objects:  11% (1/9)   \rUnpacking objects:  22% (2/9)   \rUnpacking objects:  33% (3/9)   \rUnpacking objects:  44% (4/9)   \rremote: Total 9 (delta 0), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects:  55% (5/9)   \rUnpacking objects:  66% (6/9)   \rUnpacking objects:  77% (7/9)   \rUnpacking objects:  88% (8/9)   \rUnpacking objects: 100% (9/9)   \rUnpacking objects: 100% (9/9), done.\n"
           ],
           "name": "stdout"
         }
@@ -115,6 +120,19 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "wxlU3BkILiKg",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.model_selection import train_test_split,GridSearchCV,cross_val_score"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "o6YKflyuFMlQ",
         "colab_type": "code",
         "colab": {}
@@ -130,16 +148,16 @@
       "metadata": {
         "id": "QnKFlRRnHpd0",
         "colab_type": "code",
+        "outputId": "729701f2-4c05-483e-93fc-8da049dfbaa7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        },
-        "outputId": "bc8537de-f5ed-4167-bd0a-77f89eb3b3b2"
+        }
       },
       "source": [
         "news_data.head()"
       ],
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -209,7 +227,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 5
         }
       ]
     },
@@ -218,19 +236,26 @@
       "metadata": {
         "id": "hhzU_blAHrEM",
         "colab_type": "code",
+        "outputId": "fdeedfdf-5506-4074-f4e8-88c0587466a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 109
-        },
-        "outputId": "64a4a42f-fbc7-49ba-bc12-581714d24a00"
+        }
       },
       "source": [
         "#### Counts of news category\n",
         "news_data['SECTION'].value_counts()/news_data.shape[0]\n",
         "\n",
-        "### categories are balanced"
+        "'''\n",
+        "Politics: 0\n",
+        "Technology: 1\n",
+        "Entertainment: 2\n",
+        "Business: 3\n",
+        "'''\n",
+        "\n",
+        "### no imbalance in categories"
       ],
-      "execution_count": 12,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -246,7 +271,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 6
         }
       ]
     },
@@ -254,6 +279,146 @@
       "cell_type": "code",
       "metadata": {
         "id": "Lj2Ze45TH2M8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#### Creating a test set assuming similar proportion of categories in target\n",
+        "news_train,news_test,target_train,target_test = train_test_split(news_data.drop(['SECTION'],axis = 1),news_data['SECTION'],test_size = 0.2,stratify = news_data['SECTION'])\n",
+        "news_train.index,target_train.index = range(news_train.shape[0]),range(news_train.shape[0])\n",
+        "news_test.index,target_test.index = range(news_test.shape[0]),range(news_test.shape[0])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fKvA-6KcL5Wh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ky6gPFeaMvVB",
+        "colab_type": "text"
+      },
+      "source": [
+        "## ***Analyzing news_train texts***"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8--4-z-yL66Z",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df = pd.concat([news_train.rename(columns = {'STORY' : 'text'}),pd.Series(target_train,name = 'target')],axis = 1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MnL7BS-jM9kP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "outputId": "172a66e7-6976-43bc-9f6a-64bb96b78810"
+      },
+      "source": [
+        "df.head()"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>text</th>\n",
+              "      <th>target</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>The new service, called Apple News+, will be i...</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Have the best one yet and stay the gem you are...</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Certain users around the world were facing tro...</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Young heartthrob Dulquer Salmaan is the latest...</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>This May 7 on Akshaya Tritiya… we will reveal ...</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                                text  target\n",
+              "0  The new service, called Apple News+, will be i...       1\n",
+              "1  Have the best one yet and stay the gem you are...       2\n",
+              "2  Certain users around the world were facing tro...       1\n",
+              "3  Young heartthrob Dulquer Salmaan is the latest...       2\n",
+              "4  This May 7 on Akshaya Tritiya… we will reveal ...       2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DL1Rs3GyNF52",
         "colab_type": "code",
         "colab": {}
       },
